samples/_failures_safe/1761490556_1fca3e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_75707565.c: In function ‘main’:
./samples/SAFE/__tmp_75707565.c:137:5: error: expected declaration or statement at end of input
  137 |     }
      |     ^
